# CRISPRArchitect

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  __init__.py  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
chrombridge/: __init__.py  distance.py  polymer_model.py  tad_analysis.py  translocation.py
conversion_sim/: __init__.py  filament.py  models.py  resection.py  simulator.py  synthesis.py
docs/: ARCHITECTURE.md  HONEST_ASSESSMENT.md  LIVE_DEMO_SCRIPT.md  PRESENTATION_GUIDE.md  ROADMAP.md  SESSION_CONTEXT.md  USER_GUIDE.md
examples/: fetch_real_genes.py  your_scenario_analysis.py
loopsim/: __init__.py  chromatin_fiber.py  cohesin_extruder.py  homology_search.py  simulator.py  visualize.py
mosaic/: __init__.py  gene_structure.py  mutation_classifier.py  reporter.py  scorer.py  strategy_enumerator.py
paper/: CRISPRArchitect_Cover_Letter.docx  CRISPRArchitect_PLOS_manuscript.docx  CRISPRArchitect_PLOS_manuscript_with_figures.docx  CRISPRArchitect_Supplementary.docx  PLOS_CompBio_manuscript.md  REFERENCE_VERIFICATION.md  cover_letter.md  generate_figures.py  manuscript_draft.md  supplementary_materials.md
paper/figures/: Fig1.tif  Fig2.tif  Fig3.tif  FigS1.tif  FigS2.tif
tests/: test_conversion_sim.py
topopred/: __init__.py  accessibility.py  g_quadruplex.py  hairpin.py  optimizer.py
utils/: __init__.py  constants.py  ensembl.py  plotting.py  sequence.py
validation/: MOSAIC_BENCHMARK_REPORT.md  VALIDATION_REPORT.md  benchmark_mosaic.py  validate_conversionsim.py
webapp/: app.py  requirements.txt  run.sh  style.py
