[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crisprarchitect"
version = "0.1.0"
description = "A computational toolkit for multi-site genome editing strategy optimization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "CRISPRArchitect Team"},
]
keywords = [
    "CRISPR", "genome-editing", "HDR", "iPSC", "cssDNA",
    "gene-therapy", "bioinformatics", "computational-biology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
crisprarchitect = "cli:main"

[project.urls]
Homepage = "https://github.com/crisprarchitect/crisprarchitect"
Documentation = "https://crisprarchitect.readthedocs.io"
Repository = "https://github.com/crisprarchitect/crisprarchitect"

[tool.setuptools.packages.find]
include = [
    "crisprarchitect",
    "conversion_sim",
    "mosaic",
    "topopred",
    "chrombridge",
    "loopsim",
    "utils",
]
exclude = ["tests", "validation", "webapp", "examples", "docs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
